# AI-

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  foreshadowing.py  model_config.py  prompt_fragment.py  prompt_preset.py  story.py  summary.py  world_book.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py  registry.py
backend/app/routers/: chapter.py  continuation.py  foreshadowing.py  model_config.py  prompt_preset.py  story.py  summary.py  world_book.py
backend/app/services/: chapter_split.py  continuation.py  foreshadowing.py  polishing.py  prompt_assembler.py  summarization.py  websocket_manager.py  world_analysis.py
backend/app/utils/: model_fallback.py  prompt_templates.py  text_utils.py
backend/tests/: conftest.py  test_prompt_assembler.py
docs/agents/: domain.md  triage-labels.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AIAssistDialog.tsx  AccordionSidebar.tsx  ChapterList.tsx  ContinuationControls.tsx  ForeshadowingList.tsx  SummaryList.tsx  TiptapEditor.tsx  TopToolbar.tsx  WorldBookList.tsx
frontend/src/hooks/: useSSEStream.ts  useSplitPane.ts
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  PromptOrderPage.tsx  SettingsPage.tsx  WorldBookEditPage.tsx
frontend/src/stores/: editorStore.ts  storyStore.ts
scripts/: start.bat
(+5 files in other folders)
